--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 club in Ethiopia in which talented Ethiopians and
                 other Africans can have a good opportunity to build
                 up their basketball talents and reach to the highest
-                level (NBA). abcd
+                level (NBA).
        </footer> 
     </body>
+
 </html>
